fix: update swagger shoeController annotations
